# backend/licitatie-curieri/src/main/java/ro/fmi/unibuc/licitatie_curieri/domain/user/entity/UserType.java
@@ -3,5 +3,5 @@ package ro.fmi.unibuc.licitatie_curieri.domain.user.entity;
 public enum UserType {
     CLIENT,
     COURIER,
-    ADMIN_RESTAURANT
+    RESTAURANT_ADMIN
 }
