# backend/licitatie-curieri/src/main/resources/openapi/user.yaml
@@ -36,7 +36,6 @@ paths:
             application/json:
               schema:
                 $ref: 'common.yaml#/components/schemas/GenericApplicationError'
-
   /users/{email}/verification:
     put:
       tags:
@@ -73,7 +72,6 @@ paths:
             application/json:
               schema:
                 $ref: 'common.yaml#/components/schemas/GenericApplicationError'
-
   /users/login:
     post:
       tags:
@@ -106,7 +104,6 @@ paths:
             application/json:
               schema:
                 $ref: 'common.yaml#/components/schemas/GenericApplicationError'
-
   /users/getTwoFACode:
     put:
       tags:
@@ -135,7 +132,6 @@ paths:
             application/json:
               schema:
                 $ref: 'common.yaml#/components/schemas/GenericApplicationError'
-
 components:
   schemas:
     UserCreation:
@@ -183,7 +179,6 @@ components:
           example: examplePassword1!
         userType:
           $ref: '#/components/schemas/UserType'
-
     UserCreationResponse:
       type: object
       properties:
@@ -210,7 +205,6 @@ components:
           example: "+40123456789"
         userType:
           $ref: '#/components/schemas/UserType'
-
     UserVerification:
       type: object
       required:
@@ -225,7 +219,6 @@ components:
           description: Phone verification code
           type: string
           example: 12345
-
     UserType:
       type: string
       description: Type of User in the application
@@ -233,8 +226,7 @@ components:
       enum:
         - CLIENT
         - COURIER
-        - ADMIN_RESTAURANT
-
+        - RESTAURANT_ADMIN
     UserLogin:
       type: object
       required:
@@ -250,7 +242,6 @@ components:
           type: string
           description: User's password
           example: securePassword123!
-
     UserLoginResponse:
       type: object
       required:
@@ -260,7 +251,6 @@ components:
           type: string
           description: JSON Web Token
           example: eyJhbGciOiJIUzUxMiJ9.eyJzdWIiOiJhbGV4X2lzYWM3MkB5YWhvby5jb20iLCJpYXQiOjE3MzQwNDI1MjcsImV4cCI6MTczNDY0NzMyN30.-lQlrmLP06IML36ls9hWzboJQrs5Udm1Uz65KY5B8aSvrui3AHSNAtqws64WuFViFuxGQe6yeKdEUsolg-uUaw
-
     UserTwoFAVerification:
       type: object
       required:
